# tokenslim

./: .env.example  .gitignore  .tokenslim-redact.toml.example  .tokenslim-whitelist.toml.example  .tokenslim.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  gen_logs.py  plugins_registry.md
.github/workflows/: build-release.yml  ci-sdk.yml  docker-publish.yml  pypi-publish.yml  release-smoke.yml
chrome-extension/: manifest.json  package-lock.json  package.json  tsconfig.json
chrome-extension/src/: api.ts  background.ts  config.ts  content.ts  interceptor.ts  platform-adapter.ts  popup.html  popup.ts  rehydrator.ts  styles.css
config/: mcp_servers.fixed.json  plugins.toml  project_insight.toml  rewrites.toml.example  semantic_aliases.toml  vcs_plugin.example.json  whitelist.toml
config/frameworks/: angular.json  blade.json  erb.json  freemarker.json  go-template.json  handlebars.json  jinja2.json  razor.json  react.json  shell-template.json  sql-template.json  svelte.json  thymeleaf.json  vue.json
config/languages/: cpp.json  csharp.json  dockerfile.json  gcc-flags.json  go.json  groovy.json  ini.json  java.json  javascript.json  json-config.json  kotlin.json  makefile.json  nginx.json  properties.json  python.json  rust.json  scala.json  shell.json  toml.json  xml-config.json  yaml.json
config/plugins/: android_gradle.json  ansi_cleaner.json  ansible.json  artifact_summary.json  bazel.json  build_plugin.route.json  ci_log.json  ci_log.route.json  cloud_log.json  cloudformation.json  db_log.json  dotnet.json  encoding_fallback.json  explain.json  gcc_log.json  generic_text.json  generic_text_plugin.route.json  git_diff.json  helm.json  java_stack.json  json.json  kubernetes_docker.json  markdown.json  maven.json  minify_code.json  ndjson.json  node_error.json  node_plugin.route.json  nodejs.json  noise_filter.json  php_ruby.json  protobuf.json  pulumi.json  pytest.json  python_traceback.json  rust_go.json  shell_session.json  smart_code.json  smart_path.json  spring_boot.json  (+27 more)
crates/plugin-interface/: Cargo.toml
crates/tokenslim-py/: Cargo.toml  pyproject.toml
crates/tokenslim-py/src/: lib.rs
docs/: profile.txt
docs/audit/: audit_health.md  audit_index.json  audit_review_prompt.md  capture_reorder.py  capture_webui.py  plugin_capability_index.json  route_replay_cases.json  route_replay_cases.md  verify_i18n.py
docs/design/: WORKSPACE_DOCTOR_SPEC.md  WORKSPACE_ECOSYSTEM_SUPPORT.md  audit_llm_kb_design.md  compression.md  compression_pipeline.md  metrics.md  plugin_config_loader.md  plugin_dispatcher.md  server.md  vcs_coverage_matrix.md
docs/development/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  PLUGIN_COMMENT_REFERENCE.md  PLUGIN_DEVELOPMENT.md  TESTING.md
docs/guides/: QUICKSTART.md  SDK_USAGE.md  USER_GUIDE.md
docs/plans/: FEATURE_ROADMAP.md
docs/prompts/: README.md  semantic_audit_profiles.md
docs/reports/: benchmark_history.md  benchmark_report.json  benchmark_report.md  plugin_capability_matrix.md
docs/webui-screenshots/: reorder-page.html
examples/: cli_usage.rs  drain_optimization.rs  path_analyzer_benchmark.rs  path_analyzer_example.rs  pty_demo.rs  simple_compress.rs  test_dict_manager.rs  test_parallel_text_slicer.rs  test_slice_flags.rs
jetbrains-plugin/: build.gradle.kts  settings.gradle.kts
mcp-server/: README.md  mcp_servers.example.json  package-lock.json  package.json
mcp-server/src/: index.ts
resources/: messages.ar.json  messages.de.json  messages.en.json  messages.es.json  messages.fr.json  messages.ja.json  messages.ko.json  messages.ru.json  messages.zh-CN.json  messages.zh-TW.json
samples/android_gradle_plugin/: case_001_gradle_build.scenario.yaml  case_002_gradle_task.scenario.yaml  case_003_gradle_noise.scenario.yaml  case_004_gradle_long_line.scenario.yaml  case_005_gradle_single.scenario.yaml  case_006_gradle_empty.scenario.yaml  case_007_gradle_resource_warn.scenario.yaml  case_008_gradle_jenkins.scenario.yaml  case_009_gradle_d8.scenario.yaml  case_010_gradle_apk.scenario.yaml  case_011_gradle_mixed.scenario.yaml  case_012_gradle_no_compress.scenario.yaml  case_013_gradle_generic_build.scenario.yaml  case_014_gradle_dependency_download.scenario.yaml  case_015_gradle_daemon_failure.scenario.yaml  case_016_github_actions_gradle_test_failure.scenario.yaml  case_017_gitlab_gradle_wrapper_failure.scenario.yaml  case_018_gradle_ci_cache.scenario.yaml  case_019_gradle_connected_android_test_failure.scenario.yaml  case_020_gradle_kotlin_compile_failure.scenario.yaml  case_021_gradle_build_scan_warning.scenario.yaml  case_022_gradle_multi_project_failure.scenario.yaml
scripts/: aggregate_audit_health.py  audit_all_case_metrics.py  audit_artifact_governance.ps1  audit_case_metrics.py  audit_error_literal_guard.ps1  audit_i18n_coverage.ps1  audit_llm_common.py  audit_sample_case_quality.py  build-npm-binary-package.mjs  bump-version.mjs  extract_plugin_design.py  fill_case_sidecars.py  gen_messy_jbuild.py  generate_case_sidecars.py  generate_plugin_alignment_report.py  generate_plugin_capability_index.py  regen_benchmarks.py  release_smoke_gate.ps1  tag-status.ps1  translate_messages_fields.py
sdk/python/: README.md  pyproject.toml  tokenslim_sdk.py
src/: lib.rs  main.rs
tests/: cli_run_refactor.rs  dedup_path_regression.rs  dedup_pattern_regression.rs  dictionary_custom_regression.rs  doctor_encoding.rs  doctor_workspace.rs  e2e_roundtrip_regression.rs  encoding_regression.rs  init_command.rs  integration_test.rs  path_analyzer_test.rs  server_webui_e2e.rs  test_batch_compress.rs  test_compression.rs  test_gcc_log_optimizer.rs  test_integration.rs  test_parallel_compression.rs  test_parallel_read.rs  test_plugin_safety.rs  test_py_smoke.py  test_relative_timestamp.rs  test_simple_perf.rs  test_vocabulary.rs
tokenslim_kb/: architecture.yaml  project.yaml
vscode-extension/: package-lock.json  package.json  tsconfig.json
webui/: index.html
(+2063 files in other folders)
