[package]
name = "tokenslim"
version = "0.3.2"
edition = "2021"

[workspace]
resolver = "2"
members = [".", "crates/tokenslim-py"]

[workspace.dependencies]
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.0.6"
libloading = "0.9.0"
log = "0.4"
rayon = "1.8"
memmap2 = "0.9"
crossbeam-channel = "0.5"
plugin-interface = { path = "./crates/plugin-interface", version = "0.3.2" }
pyo3 = { version = "0.28.2", features = ["extension-module"] }

[dependencies]
axum = "0.8.8"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
notify = "7.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "2.0.18"
md5 = "0.8.0"
memchr = "2.7"
aho-corasick = "1.1"
regex.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
libloading.workspace = true
log.workspace = true
rayon.workspace = true
memmap2.workspace = true
crossbeam-channel.workspace = true
plugin-interface.workspace = true
tiktoken-rs = "0.9.1"
env_logger = "0.11.9"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }
once_cell = "1.19"
quick-xml = "0.39.2"
sysinfo = "0.38.4"
sys-locale = "0.3"
chardetng = "0.1"
encoding_rs = "0.8"
lazy_static = "1.4"
candle-core = { version = "0.9.2", optional = true }
candle-nn = { version = "0.9.2", optional = true }
tokenizers = { version = "0.22.2", optional = true }
hf-hub = { version = "0.5.0", optional = true }
candle-transformers = { version = "0.9.2", optional = true }
dashmap = "6.1.0"
bumpalo = { version = "3.16", features = ["collections"] }
rusqlite = { version = "0.34", features = ["bundled"] }

[dev-dependencies]
criterion = "0.8.2"

[features]
ml = ["candle-core", "candle-nn", "tokenizers", "hf-hub", "candle-transformers"]
candle-core = ["dep:candle-core"]
candle-nn = ["dep:candle-nn"]
tokenizers = ["dep:tokenizers"]
hf-hub = ["dep:hf-hub"]
candle-transformers = ["dep:candle-transformers"]

# 独立工具类 bin，不加测试（避免 rlib 依赖格式冲突）
[[bin]]
name = "log_reorder"
test = false

[[bin]]
name = "pipeline_bench"
test = false
