[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "tokenslim"
version = "0.3.6"
description = "High-performance Rust token compression engine for LLM inputs."
readme = "../../README.md"
authors = [{ name = "nuoyazhizhou" }]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nuoyazhizhou/tokenslim"
Repository = "https://github.com/nuoyazhizhou/tokenslim.git"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tokenslim"
