[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenslim-client"
version = "0.4.0"
description = "TokenSlim REST client SDK for Python (sync + async)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["tokenslim_client*"]
